--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "muter": "^0.6.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   }
 }
